--- a/pokedex.html
+++ b/pokedex.html
@@ -99,6 +99,7 @@
     </footer>
 
     <!-- JavaScript file link -->
+    <script src="pokedex.js"></script>
     <script src="./pokedex-objects-dom.js"></script>
 
 </body>
